Fix scrollbar on levels list

--- a/src/app/components/App.css
+++ b/src/app/components/App.css
@@ -2,6 +2,7 @@
 
 body { /* stylelint-disable-line selector-no-type */
   background-color: black;
+  overflow-y: hidden;
 }
 
 .App {
